# algorithmic-languages-2-lab-3

./: CMakeLists.txt  isobaric_process.cpp  isobaric_process.h  isohoric_process.cpp  isohoric_process.h  main.cpp  thermodynamic_process.cpp  thermodynamic_process.h
